# mandelbrot_test-

./: CMakeLists.txt  LICENSE  README.md  main.c  mandelbrot_test-.kdev4
.kdev4/: mandelbrot_test-.kdev4
